cluster/manifests/anonymous-proxy/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anonymous-proxy
  labels:
    name: anonymous-proxy
    pod-security.kubernetes.io/enforce: restricted
