cluster/manifests/anonymous-proxy/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: anonymous-proxy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: anonymous-proxy
  mtls:
    mode: STRICT
